syntax = "proto3";

import "google/protobuf/timestamp.proto";

package database.auth;

service UserAuthService {
    rpc CreateUser (CreateUserRequest) returns (BasicUserResponse) {}
    rpc GetUser (GetUserRequest) returns (BasicUserResponse) {}
    rpc GetUserByEmail (GetUserByEmailRequest) returns (BasicUserResponse) {}
    rpc GetUserByAccount (GetUserByAccountRequest) returns (BasicUserResponse) {}
    rpc UpdateUser (UpdateUserRequest) returns (BasicUserResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (BasicUserResponse) {}
}

message BasicUserResponse {
    string id = 1;
    string email = 2;
    bool cadastroCompleto = 3;
    optional google.protobuf.Timestamp emailVerified = 4;
    optional string name = 5;
    optional string image = 6;
}

message CreateUserRequest {
    string email = 1;
    google.protobuf.Timestamp emailVerified = 2;
    optional string name = 3;
    optional string image = 4;
}

message GetUserRequest {
    string id = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByAccountRequest {
    string providerAccountId = 2;
    string provider = 3;
}

message UpdateUserRequest {
    string id = 1;
    optional string email = 2;
    optional google.protobuf.Timestamp emailVerified = 3;
    optional bool cadastroCompleto = 4;
    optional string name = 5;
    optional string image = 6;
}

message DeleteUserRequest {
    string id = 1;
}

 
service SessionAuthService {
    rpc CreateSession (SessionObj) returns (SessionObj) {}
    rpc GetSessionAndUser (GetSessionAndUserRequest) returns (GetSessionAndUserResponse) {}
    rpc UpdateSession (UpdateSessionRequest) returns (SessionObj) {}
    rpc DeleteSession (DeleteSessionRequest) returns (SessionObj) {}
}

message SessionObj {
    string sessionToken = 1;
    string userId = 2;
    google.protobuf.Timestamp expires = 3;
}

message GetSessionAndUserRequest {
    string sessionToken = 1;
}

message GetSessionAndUserResponse {
    SessionObj session = 1;
    BasicUserResponse user = 2;
}

message UpdateSessionRequest {
    string sessionToken = 1;
    optional string userId = 2;
    optional google.protobuf.Timestamp expires = 3;
}

message DeleteSessionRequest {
    string sessionToken = 1;
}

service VerificationTokenAuthService {
    rpc CreateVerificationToken (VerificationTokenObj) returns (VerificationTokenObj) {}
    rpc UseVerificationToken (UseVerificationTokenRequest) returns (VerificationTokenObj) {}
}

message VerificationTokenObj {
    string identifier = 1;
    google.protobuf.Timestamp expires = 2;
    string token = 3;
}

message UseVerificationTokenRequest {
    string identifier = 1;
    string token = 2;
}


service AccountAuthService {
    rpc LinkAccount (AdapterAccount) returns (AdapterAccount) {}
    rpc UnlinkAccount (UnlinkAccountRequest) returns (AdapterAccount) {}
}

enum ProtoProviderType {
    oidc = 0;
    oauth = 1;
    email = 2;
    credentials = 3;
}

message AdapterAccount {
    string userId = 1;
    ProtoProviderType type = 2;
    string provider = 3;
    string providerAccountId = 4;
    optional string refresh_token = 5;
    optional string access_token = 6;
    optional int32 expires_in = 7;
    optional string token_type = 8;
    optional string scope = 9;
    optional string id_token = 10;
    optional string session_state = 11;
}

message UnlinkAccountRequest {
    string provider = 1;
    string providerAccountId = 2;
}